[gd_scene load_steps=28 format=2]

[ext_resource path="res://wolfsheet2.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 192, 32, 64 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "alas",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "oikea",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "vasen",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "yl√∂s",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=39]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 5.2, 3.66667 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 17, 21 )

[node name="koira" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.5, 31.2813 )
scale = Vector2( 1.28125, 0.97754 )
frames = SubResource( 38 )
animation = "idle"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -3, 33 )
scale = Vector2( 20, 20 )
shape = SubResource( 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 37 )
scale = Vector2( 2.5, 3 )
shape = SubResource( 40 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -304, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 299, -17 )
shape = SubResource( 41 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
